--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,24 @@ html,
 body {
   padding: 0;
   margin: 0;
-
   background-color: var(--primary);
+}
+
+#app{
+  padding: 1em;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+  counter-reset: li;
+}
+
+li{
+  margin-bottom: 1em;
+  counter-increment: li;
+}
+
+li::before{
+  content: counter(li) ') ';
 }
